# octoPOS-install

./: .env.example  .gitignore  README.md  docker-compose.yml  install-silent.ps1  install.ps1  install.sh  uninstall.ps1
bootstrapper/: package.json
bootstrapper/src-tauri/: Cargo.toml  app.manifest  app.rc  build.rs  tauri.conf.json
bootstrapper/src-tauri/capabilities/: default.json
bootstrapper/src-tauri/embedded/: .gitignore  .gitkeep
bootstrapper/src-tauri/src/: main.rs  telemetry.rs
companion-service/: Cargo.toml
companion-service/src/: main.rs
