[package]
name = "octopos-updater"
version = "0.1.0"
edition = "2021"
description = "OctoPOS Windows companion service for unattended privileged updates"
authors = ["nonlyweb"]

[[bin]]
name = "octopos-updater"
path = "src/main.rs"

# Smaller binary in release, since we ship it embedded inside the
# bootstrapper .exe and bandwidth from the platform endpoint matters.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
simplelog = "0.12"

# `windows-service` is the standard Microsoft-blessed crate for the
# SCM dance (register / start / stop / dispatch). Only meaningful on
# Windows; gated below.
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

# Named pipe + Windows API access for the IPC layer.
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_Foundation",
  "Win32_System_Pipes",
  "Win32_Storage_FileSystem",
  "Win32_Security",
]
